--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
-body{
+@font-face {
+    font-family: 'zabars';
+    src: url('./fonts/zabars.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+
+}
+
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    justify-content: center;
+    background-image: url('./img/downloads/desert.png');
+    font-family: 'zabars', Arial, Helvetica, sans-serif;
+
 }
 
-canvas{
+h1{
+    font-size: 64px;
+    letter-spacing: 4px;
+    text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+canvas {
     background-color: black;
 }
