--- a/style.css
+++ b/style.css
@@ -27,3 +27,51 @@ h1{
 canvas {
     background-color: black;
 }
+
+.game-container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid white;
+}
+
+#start-screen{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(img/9_intro_outro_screens/start/startscreen_2.png);
+    background-size: 100% 100%;
+}
+.upper-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
+
+
+#start-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 50px;
+    background-color: rgb(255, 181, 0);
+    font-size: 32px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.settings{
+    gap: 8px;
+    display: flex;
+    top: 10px;
+    right: 10px;
+    position: absolute;
+}
+
+.settings img{
+    width: 32px;
+    height: 32px;
+}
