--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ canvas {
     height: 100%;
     background-image: url('img/9_intro_outro_screens/game_over/you lost.png');
     background-size: 100% 100%;
+    background-position: center -50px;
    visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
