--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ canvas {
 }
 
 #start-screen {
+    z-index: 3;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -78,11 +79,11 @@ canvas {
     width: 32px;
     height: 32px;
     cursor: pointer;
-    z-index: 2;
+    z-index: 5;
 }
 
 #game-over-title {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -94,7 +95,7 @@ canvas {
 }
 
 #game-loose-title {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -136,6 +137,54 @@ canvas {
     letter-spacing: 2px;
     cursor: pointer;
 }
+
+#pause-img{
+    display: none;
+}
+
+.pause-buttons{
+    display: none;
+    flex-direction: column;
+    gap: 24px;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pause-buttons button{
+    background-color: rgb(255, 181, 0);
+    border: none;
+    height: 48px;
+    width: 200px;
+    font-size: 32px;
+    font-family: 'zabars';
+    border-radius: 8px;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+#pause-screen{
+    z-index: 3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+   visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.63s, opacity 0.63s linear;
+}
+
+#pause-screen.active{
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+}
+
+.pause-settings{
+    font-size: 48px;
+}
+
+
 
 .blur{
     filter: blur(10px);
