--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ canvas {
     height: 100%;
     background-image: url('img/9_intro_outro_screens/game_over/game over!.png');
     background-size: 100% 100%;
-   visibility: hidden;
+    visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
 }
@@ -102,7 +102,7 @@ canvas {
     background-image: url('img/9_intro_outro_screens/game_over/you lost.png');
     background-size: 100% 100%;
     background-position: center -50px;
-   visibility: hidden;
+    visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
 }
@@ -113,13 +113,13 @@ canvas {
     transition-delay: 0s;
 }
 
-#game-loose-title.active{
+#game-loose-title.active {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
 }
 
-.endscreen-buttons{
+.endscreen-buttons {
     gap: 24px;
     height: 80%;
     display: flex;
@@ -127,7 +127,7 @@ canvas {
     justify-content: center;
 }
 
-.endscreen-buttons button{
+.endscreen-buttons button {
     background-color: rgb(255, 181, 0);
     border: none;
     height: 48px;
@@ -138,11 +138,12 @@ canvas {
     cursor: pointer;
 }
 
-#pause-img{
+#pause-img {
     display: none;
 }
 
-.pause-buttons{
+.pause-buttons {
+    margin-top: 24px;
     display: none;
     flex-direction: column;
     gap: 24px;
@@ -152,7 +153,7 @@ canvas {
     justify-content: center;
 }
 
-.pause-buttons button{
+.pause-buttons button {
     background-color: rgb(255, 181, 0);
     border: none;
     height: 48px;
@@ -164,74 +165,125 @@ canvas {
     cursor: pointer;
 }
 
-#pause-screen{
+#pause-screen {
     z-index: 3;
     position: absolute;
     width: 100%;
     height: 100%;
-   visibility: hidden;
+    visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
 }
 
-#pause-screen.active{
+#pause-screen.active {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
 }
 
-.pause-settings{
+.pause-settings {
     font-size: 48px;
 }
 
 
 
-.blur{
+.blur {
     filter: blur(10px);
 }
 
-@media only screen and (max-width: 720px){
-    canvas{
+#touch-panels {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    bottom: 5px;
+}
+
+#right-side {
+    display: flex;
+    gap: 8px;
+    padding-right: 8px;
+}
+
+#left-side{
+    display: flex;
+    gap: 8px;
+    padding-left: 8px;
+}
+
+.touch-button {
+    display: flex;
+    border: 2px solid black;
+    background-color: rgb(255, 181, 0);
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    justify-content: center;
+    align-items: center;
+}
+
+#throw-img {
+    width: 64px;
+    height: 64px;
+}
+
+#jump-img {
+    width: 40px;
+    height: 40px;
+}
+
+#left-img{
+    width: 40px;
+    height: 40px;
+}
+
+#right-img{
+    width: 40px;
+    height: 40px;
+}
+
+@media only screen and (max-width: 720px) {
+    canvas {
         width: 100%;
     }
-    #start-btn{
+
+    #start-btn {
         position: absolute;
         top: 30px;
     }
 }
 
-@media only screen and (max-height: 480px){
-    canvas{
+@media only screen and (max-height: 480px) {
+    canvas {
         width: 100%;
     }
 }
 
-@media (max-width: 550px){
-    #start-btn{
+@media (max-width: 550px) {
+    #start-btn {
         font-size: 24px;
         width: 100px;
         height: 32px;
     }
 
-    .settings img{
+    .settings img {
         width: 24px;
         height: 24px;
     }
 }
 
-@media (max-width: 340px){
-    h1{
+@media (max-width: 340px) {
+    h1 {
         font-size: 32px;
     }
 
-    .endscreen-buttons button{
+    .endscreen-buttons button {
         font-size: 24px;
     }
 }
 
-@media (max-height: 550px){
-    h1{
+@media (max-height: 550px) {
+    h1 {
         display: none;
     }
 }
-
