--- a/style.css
+++ b/style.css
@@ -232,15 +232,13 @@ canvas {
     height: 40px;
 }
 
-#left-img{
+#left-img, #right-img{
     width: 40px;
     height: 40px;
 }
 
-#right-img{
-    width: 40px;
-    height: 40px;
-}
+
+
 
 @media only screen and (max-width: 720px) {
     canvas {
