--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ canvas {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
+    backdrop-filter: blur(10px);
 }
 
 #game-loose-title {
@@ -105,6 +106,7 @@ canvas {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
+    backdrop-filter: blur(10px);
 }
 
 #game-over-title.active {
@@ -151,6 +153,7 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .pause-buttons button {
@@ -173,6 +176,7 @@ canvas {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 0.63s, opacity 0.63s linear;
+    backdrop-filter: blur(10px);
 }
 
 #pause-screen.active {
@@ -181,11 +185,73 @@ canvas {
     transition-delay: 0s;
 }
 
+#assignment-screen {
+    display: flex;
+    z-index: 4;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.63s, opacity 0.63s linear;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    backdrop-filter: blur(10px);
+}
+
+#assignment-screen.active {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+}
+
+.assignment-style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
+
+.assignment-headline {
+    font-size: 36px;
+}
+
+.keys {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    gap: 8px;
+}
+
+.keys img {
+    border: 2px solid black;
+    padding: 4px;
+}
+
 .pause-settings {
     font-size: 48px;
 }
 
+.key-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    gap: 8px;
+}
 
+.close-assignments{
+    cursor: pointer;
+    font-size: 36px;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+}
 
 .blur {
     filter: blur(10px);
@@ -205,7 +271,7 @@ canvas {
     padding-right: 8px;
 }
 
-#left-side{
+#left-side {
     display: flex;
     gap: 8px;
     padding-left: 8px;
@@ -232,7 +298,8 @@ canvas {
     height: 40px;
 }
 
-#left-img, #right-img{
+#left-img,
+#right-img {
     width: 40px;
     height: 40px;
 }
