--- a/style.css
+++ b/style.css
@@ -316,12 +316,12 @@ canvas {
 @media only screen and (max-width: 720px) {
     #canvas {
         width: 100%;
-        height: 100vh;
+        /*height: 100vh;*/
     }
 
     #game-container {
         width: 100%;
-        height: 100vh;
+        /*height: 100vh;*/
     }
 
     #start-btn {
@@ -348,12 +348,7 @@ canvas {
 
 }
 
-@media only screen and (max-height: 480px) {
-    canvas {
-        width: 100%;
-        height: 100%;
-    }
-}
+
 
 @media (max-width: 550px) {
     #start-btn {
@@ -378,6 +373,15 @@ canvas {
     }
 }
 
+@media (max-height: 640px){
+    h1 {
+        display: none;
+    }
+    #assignment-screen{
+        justify-content: center;
+    }
+}
+
 @media (max-height: 550px) {
     h1 {
         display: none;
@@ -393,9 +397,42 @@ canvas {
     #game-container{
         height: 100vh;
         width: 100vw;
+        border: 0;
     }
 
     .pause-settings{
         display: none;
+    }
+
+    @media only screen and (max-height: 480px) {
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+    
+        #full-screen-icon{
+            display: none;
+        }
+        #game-container{
+            height: 100vh;
+        }
+
+        #screen-info{
+            display: none;
+        }
+    }
+
+    @media (max-height: 400px){
+        .pause-buttons{
+            margin-top: 0;
+            height: 100%;
+
+        }
+
+        .pause-buttons button{
+            font-size: 20px;
+            height: 24px;
+            width: 150px;
+        }
     }
 }
